argoproj/bastion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bastion
  labels:
    # privileged required: sshd needs root and setuid/setgid capabilities
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
